shopping-cart-app/deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  labels:
    app: shopping-cart
  name: shopping-cart
  namespace: abastidasc-devops
spec:
  selector:
    matchLabels:
      app: shopping-cart
  replicas: 2 
  template:
    metadata:
      labels:
        app: shopping-cart
    spec:
      containers:
        - name: shopping-cart
          image: adijaiswal/shopping-cart:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8070
