shopping-cart-app/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-cart
  namespace: abastidasc-devops
  labels:
    app: shopping-cart
spec:
  ports:
    - protocol: "TCP"
      port: 8090
      targetPort: 8090
  selector:
    app: shopping-cart
